logs/crash.log
Traceback (most recent call last):
  File "C:\Users\dkuzm\Desktop\FlowZap\main.py", line 102, in <module>
    main()
    ~~~~^^
  File "C:\Users\dkuzm\Desktop\FlowZap\main.py", line 83, in main
    from core.manager import ZapretManager
  File "C:\Users\dkuzm\Desktop\FlowZap\core\manager.py", line 245
    parts = line.strip('"').split('","')                if len(parts) >= 2:
                                                                          ^
SyntaxError: invalid syntax
